Added google verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+        <meta name="google-site-verification" content="PRHNqJu4vBUuBW7XsaTJ5atOyoZmHEWv6jli3G7AEpE" />
         <meta property="og:image" content="images/custom/main_page/main_hero_1.jpg">
         <link rel="image_src" href="images/custom/main_page/main_hero_1.jpg" />
         
