--- a/connect.html
+++ b/connect.html
@@ -145,7 +145,7 @@
                                             Personal Email
                                         </div>
                                         <div class="ci-text">
-                                            <a href="mailto:wwrsitpune@gmail.com ">wwrsitpune@gmail.com</a>
+                                            <a href="mailto:wrenchwieldersracing@sitpune.edu.in">wrenchwieldersracing@sitpune.edu.in</a>
                                         </div>
                                     </div>
                                 </div>
@@ -294,14 +294,15 @@
                         <!-- End Features Item -->
                         
                         <!-- Features Item -->
-                        <a href="http://www.tatatechnologies.com/" target="_blank">
+                        <a href="https://www.indiamart.com/noblecast/
+" target="_blank">
                       <div class="benefit-item">
                             <div class="alt-features-icon">
-                                    <img src="images/sponsors/tata.png" alt=""/>
+                                    <img src="images/sponsors/3.png" alt=""/>
                                 </div>
-                            <h3 class="benefit-title font-alt">Tata Technologies.</h3>
+                            <h3 class="benefit-title font-alt">Noble Cast Comp Pvt Ltd.</h3>
                             <div class="benefits-descr">
-								Tata Technologies is a global engineering consulting organisation with core specialisation in automotive and aerospace. The company delivers customised solutions for engineering and design, product life cycle management and enterprise system integration for the manufacturing sector.
+								Noble Cast Comp is one of Pune's leading Aluminium Casting Supplier and Manufacturer.
                             </div>
                         </div>
                         </a>
