updated e-mail id

--- a/connect.html
+++ b/connect.html
@@ -236,7 +236,7 @@
                     <div class="footer-social-links mb-110 mb-xs-60">
                         <a href="https://www.facebook.com/WrenchWieldersRacing/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.youtube.com/channel/UCJXTKTD3IFHpYb5ftKFRlUQ" title="Youtube" target="_blank"><i class="fa fa-youtube"></i></a>
-						<a href="mailto:wwrsitpune@gmail.com" title="E-mail" target="_blank"><i class="fa fa-envelope"></i></a>
+						<a href="mailto:wrenchwieldersracing@sitpune.edu.in" title="E-mail" target="_blank"><i class="fa fa-envelope"></i></a>
                     </div>
                     <!-- End Social Links -->  
                     
@@ -286,7 +286,7 @@
                                 </div>
                             <h3 class="benefit-title font-alt">Anand Group.</h3>
                             <div class="benefits-descr">
-								ANAND Group is one of the best automobile Companies in India & leading automotive components manufacturer. We provide best  automotive &amp; automobile engineering solutions to our clients worldwide.
+								ANAND Group is one of the best automobile Companies in India &amp; leading automotive components manufacturer. We provide best  automotive &amp; automobile engineering solutions to our clients worldwide.
                             </div>
                         </div>
                         </a>
