--- a/home.html
+++ b/home.html
@@ -357,7 +357,7 @@
                     <div class="footer-social-links mb-110 mb-xs-60">
                         <a href="https://www.facebook.com/WrenchWieldersRacing/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.youtube.com/channel/UCJXTKTD3IFHpYb5ftKFRlUQ" title="Youtube" target="_blank"><i class="fa fa-youtube"></i></a>
-						<a href="mailto:wwrsitpune@gmail.com" title="E-mail" target="_blank"><i class="fa fa-envelope"></i></a>
+						<a href="mailto:wrenchwieldersracing@sitpune.edu.in" title="E-mail" target="_blank"><i class="fa fa-envelope"></i></a>
                     </div>
                     <!-- End Social Links -->  
                     
