--- a/mission.html
+++ b/mission.html
@@ -164,7 +164,8 @@
                 </div>
                 <!-- End Footer Logo -->
                 <!-- Social Links -->
-                <div class="footer-social-links mb-110 mb-xs-60"> <a href="https://www.facebook.com/WrenchWieldersRacing/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a> <a href="https://www.youtube.com/channel/UCJXTKTD3IFHpYb5ftKFRlUQ" title="Youtube" target="_blank"><i class="fa fa-youtube"></i></a> <a href="mailto:wwrsitpune@gmail.com" title="E-mail" target="_blank"><i class="fa fa-envelope"></i></a> </div>
+                <div class="footer-social-links mb-110 mb-xs-60"> <a href="https://www.facebook.com/WrenchWieldersRacing/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a> <a href="https://www.youtube.com/channel/UCJXTKTD3IFHpYb5ftKFRlUQ" title="Youtube" target="_blank"><i class="fa fa-youtube"></i></a> 
+                    <a href="mailto:wrenchwieldersracing@sitpune.edu.in" title="E-mail" target="_blank"><i class="fa fa-envelope"></i></a> </div>
                 <!-- End Social Links -->
                 <!-- Features Grid -->
                 <div class="benefits-grid">
@@ -191,7 +192,7 @@
                         <div class="benefit-item">
                             <div class="alt-features-icon"> <img src="images/sponsors/Anand.png" alt="Anand Group" /> </div>
                             <h3 class="benefit-title font-alt">Anand Group.</h3>
-                            <div class="benefits-descr"> ANAND Group is one of the best automobile Companies in India & leading automotive components manufacturer. We provide best automotive &amp; automobile engineering solutions to our clients worldwide. </div>
+                            <div class="benefits-descr"> ANAND Group is one of the best automobile Companies in India &amp; leading automotive components manufacturer. We provide best automotive &amp; automobile engineering solutions to our clients worldwide. </div>
                         </div>
                     </a>
                     <!-- End Features Item -->
